<resources>
    <string name="app_name">Zcon1 Swag Wallet</string>
    <string name="product_name">Zcon1 Swag Wallet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Zcash Reference Wallet</string>
    <string name="nav_header_subtitle">proof-of-concept</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- General -->
    <string name="ignore">ignore</string>
    <string name="details">details</string>
    <string name="cancel">cancel</string>
    <string name="wait">Wait</string>
    <string name="abort">Abort</string>
    <string name="cancelled">cancelled</string>
    <string name="ok_allcaps">OK</string>
    <string name="zec_abbreviation">ZECC</string>
    <string name="usd_abbreviation">USD</string>

    <!--  Destinations -->
    <string name="destination_title_home" ></string>
    <string name="destination_title_send">Send Zcash</string>
    <string name="destination_title_receive">Receive Zcash</string>
    <string name="destination_title_request">Request Zcash</string>
    <string name="destination_title_welcome"></string>
    <string name="destination_title_firstrun">Getting Started</string>
    <string name="destination_title_sync">Release Notes</string>
    <string name="destination_title_history">Past Transactions</string>
    <string name="destination_title_zcon1_cart">Cart</string>
    <string name="destination_title_about">About</string>
    <string name="destination_title_settings">Settings</string>
    <string name="destination_title_placeholder">Coming Soon</string>
    <string name="destination_menu_label_home">Home</string>
    <string name="destination_menu_label_send">Send</string>
    <string name="destination_menu_label_receive">Receive</string>
    <string name="destination_menu_label_request">Request</string>
    <string name="destination_menu_label_about">About</string>
    <string name="destination_menu_label_history">History</string>
    <string name="destination_menu_label_settings">Settings</string>

    <!-- Transitions -->
    <string name="transition_active_transaction_background">transition_active_transaction_background</string>
    <string name="transition_active_transaction_title">transition_active_transaction_title</string>
    <string name="transition_active_transaction_address">transition_active_transaction_address</string>
    <string name="transition_active_transaction_card">transition_active_transaction_card</string>
    <string name="transition_walkthrough_progress_bar">transition_walkthrough_progress_bar</string>
    <string name="transition_walkthrough_progress_text">transition_walkthrough_progress_text</string>


    <!--             -->
    <!-- Screen copy -->
    <!--             -->

    <!-- Onboarding -->
    <string name="onboarding_title_page_0">HEEEYO!</string>
    <string name="onboarding_title_page_1">Swag Token?</string>
    <string name="onboarding_title_page_2">Syncing</string>
    <string name="onboarding_subtitle_page_0">What should we call you?</string>
    <string name="onboarding_subtitle_page_1">Scan your token for some TAZ!</string>
    <string name="onboarding_subtitle_page_2">Patience please! Your wallet will be ready as soon as we have downloaded the latest blocks.</string>

    <!-- Home -->
    <string name="home_empty_wallet">Your wallet is empty.</string>
    <string name="home_empty_wallet_updating">Updating your wallet...</string>
    <string name="home_empty_wallet_collapse">Future transactions will show up here.</string>
    <string name="home_current_transaction_label">Current Activity</string>
    <string name="home_past_transaction_label">Past Activity</string>
    <string name="home_see_all_transaction_label">See All</string>

    <!-- History -->
    <plurals name="history_transaction_count_title">
        <item quantity="other">%s Past Transactions</item>
        <item quantity="one">%s Past Transaction</item>
    </plurals>

    <!-- Receive -->
    <string name="receive_address_title">Your Zcash shielded address</string>

    <!-- Send -->
    <string name="send_hint_input_zcash_address">Enter a Zcash address</string>
    <string name="send_label_available">Available</string>
    <string name="send_label_amount">Amount</string>
    <string name="send_label_to">To</string>
    <string name="send_label_memo">Memo (optional)</string>
    <string name="send_submit_button_text">Send Zec</string>
    <string name="send_tooltip_scan_qr">Scan QR Code</string>
    <string name="send_tooltip_address_shortcut">Paste Sample Address</string>
    <string name="send_button_label">send %1$s</string>
    <string name="send_dialog_title">Send %1$s %2$s ($%3$s)?</string>
    <string name="send_dialog_title_zcon1">Send %1$s %2$s?</string>
    <string name="send_alert_shortcut_clicked">Paste a valid sample address for testing?</string>
    <string name="send_error_address_too_short">Address is too short.</string>
    <string name="send_error_address_invalid_contents">Address appears to be invalid.</string>
    <string name="send_error_address_invalid_char">Address contains invalid characters.</string>

    <!-- About -->
    <string name="about_version">Version:</string>
    <string name="about_updated">Updated:</string>
    <string name="about_network">Network:</string>
    <string name="about_whats_new">What\'s new:</string>
    <string name="about_licensing">Licensing:</string>
    <string name="about_zcash_blog">Zcash Blog:</string>

    <!-- Settings -->
    <string name="settings_alert_reset_app">Delete all data and reset like a new installation?</string>

    <!-- Swag -->
    <string name="swag_tee_description">The Zcash Company has rebranded as The Electric Coin Company to help clear up confusion between the coin and the company. Now Zcash Co. is just ECC and you can be the first to sport the new logo :)\n\nLimited quantity of sizes.</string>
    <string name="swag_pad_description">Take notes like a pro with this ECC-branded moleskin notebook. There are only a few of these, so beg your friends for their extra TAZ and buy one quickly!\n\nVery limited supplies.</string>

    <!-- Feedback -->
    <string name="feedback_question_1">Any details you\'d like to share?</string>
    <string name="feedback_question_2">How do you normally use Zcash?</string>
    <string name="feedback_question_3">Interested in being a beta tester?</string>
    <string name="feedback_hint_1">My experience was . . .</string>
    <string name="feedback_hint_2">I use Zcash . . .</string>
    <string name="feedback_hint_3">email (optional)</string>

    <!-- Status Messages -->
    <string name="status_wallet_unfunded">Our wallet is unfunded! Let\'s get out there and earn some poker chips or convince a friend to send us some funds!</string>
    <string name="status_wallet_funds_available_for_swag">We have enough to buy some swag! Open the cart and pick some swag or maybe use this app\'s send feature to gift funds to a friend!</string>
    <string name="status_wallet_incoming_funds">We have funds that are awaiting at least 10 network confirmations in order to be available for spending.</string>
    <string name="status_wallet_chips_pending">We are waiting for poker chips to finish funding. Once they are fully mined and receive at least 20 network confirmations, the funds will be available to use!</string>
    <string name="status_wallet_generic">You really have the hang of this!</string>

    <string-array name="demo_user_names">
        <item>Alice</item>
        <item>Bob</item>
        <item>Carol</item>
        <item>Dave</item>
        <item>Custom...</item>
    </string-array>
    <string-array name="server_names">
        <item>Zcash Testnet</item>
        <item>Bolt Labs Testnet</item>
        <item>WLAN Office</item>
        <item>WLAN Conference</item>
        <item>Localhost</item>
        <item>Custom...</item>
    </string-array>

    <string name="mixpanel_project_token_dev" translatable="false">17e08c2ca8e6d1fe4f88335a2d1635cf</string>
    <string name="mixpanel_project_token_prod" translatable="false"></string>
</resources>
